--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -40,11 +40,6 @@ a {
     padding: 12px;
 }
 
-.header {
-    -webkit-backdrop-filter: blur(16px) !important;
-    backdrop-filter: blur(16px) !important;
-}
-
 header {
     border-bottom: 1px solid var(--sl-color-gray-6) !important;
 }
@@ -57,14 +52,18 @@ header {
     outline: none;
 }
 
-.hero {
-    grid-template-columns: none !important;
-}
-
 .copy {
     @apply items-center;
 }
 
 .stack {
     @apply text-center items-center;
+}
+
+body:not(:has(#starlight__sidebar)) .content-panel:has(h1#_top) {
+    display: none;
+}
+
+body:not(:has(#starlight__sidebar)) .content-panel {
+    border: none;
 }
