--- a/src/content/docs/index.astro
+++ b/src/content/docs/index.astro
@@ -9,7 +9,7 @@ import { Button } from '@components/ui/button/Button';
   </p>
   <div class="simple-page-hero__links">
     <Button url="/dotnet-starter-kit/general/getting-started/" theme="accent">Get Started</Button>
-    <Button url="https://demo.tutorialkit.dev">Watch Video</Button>
+    <Button url="https://www.youtube.com/@codewithmukesh/videos">Watch Video</Button>
   </div>
   <div class="ui-example">
   </div>
