--- a/src/content/docs/index.astro
+++ b/src/content/docs/index.astro
@@ -5,7 +5,7 @@ import { Button } from '@components/ui/button/Button';
 <div class="simple-page-hero">
   <h1>The best way to start a fullstack .NET 8 Web App.</h1>
   <p>
-    Production Grade Cloud-Ready .NET 8 Starter Kit (Web API + Blazor Client) with Multitenancy Support, and Clean/Modular Architecture that saves roughly 200+ Development Hours! All Batteries Included.
+    FullStackHero .NET 8 Starter Kit is a Production Grade Cloud-Ready Solution (Aspire + Web API + Blazor Client) with Multitenancy Support, and Clean/Modular Architecture that saves roughly 200+ Development Hours! All Batteries Included.
   </p>
   <div class="simple-page-hero__links">
     <Button url="/dotnet-starter-kit/general/getting-started/" theme="accent">Get Started</Button>
